# viaductecho-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOY.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SESSION_NOTES.md  backfill_ai_summaries.py  check_ai_summary_status.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
android-app/: README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/gradle/wrapper/: gradle-wrapper.properties
ios-app/: README.md
ios-app/ViaductEcho/: ContentView.swift  ViaductEchoApp.swift
ios-app/ViaductEcho.xcodeproj/: project.pbxproj
ios-app/ViaductEcho/Models/: Article.swift  Source.swift
ios-app/ViaductEcho/Services/: APIService.swift
ios-app/ViaductEcho/Views/: ArticleDetailView.swift  ArticleListView.swift  ArticleRowView.swift  SearchView.swift  SourcesView.swift  (+1 more)
logs/: README.md
src/: config.py  events_aggregator.py  main.py
src/api/: app.py
src/database/: api_operations.py  backfill_ai_summaries.py  check_ai_summary_status.py  event_operations.py  models.py  operations.py
src/processors/: ai_summarizer.py  content_extractor.py
src/publishers/: github_publisher.py
src/sources/: base_source.py  bbc_source.py  men_source.py  nub_source.py  onestockport_source.py  stockportcouncil_source.py  totallystockport_source.py
static_data/: event-types.json  events-calendar.json  events.json  venues.json
tests/: test_ai_summarizer.py  test_base_news_source.py  test_bbc_source.py  test_content_extractor.py  test_database_operations.py  test_db.py  test_github_publisher.py  test_men_source.py  test_nub_source.py
tests/api/: conftest.py  test_api_operations.py  test_articles_endpoints.py  test_error_handling.py  test_schemas.py  test_sources_endpoints.py
(+91 files in other folders)
