[project]
name = "viaductecho-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "fastapi==0.115.6",
    "feedparser==6.0.11",
    "lxml==6.0.1",
    "openai==1.57.2",
    "psycopg2-binary==2.9.10",
    "pytest==8.3.4",
    "pytest-mock==3.12.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.18",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "uvicorn==0.32.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
]
