[project]
name = "viaductecho-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "fastapi==0.115.6",
    "feedparser==6.0.11",
    "lxml==6.0.1",
    "openai==1.57.2",
    "psycopg2-binary==2.9.10",
    "pytest==8.3.4",
    "pytest-mock==3.12.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.18",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "uvicorn==0.32.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.6.3",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/test_*.py" = ["F401", "F811"]
"tests/test_nub_source.py" = ["E402"]
"tests/test_bbc_source.py" = ["E402"]
"tests/test_men_source.py" = ["E402"]
"src/database/backfill_ai_summaries.py" = ["E402"]
"src/database/check_ai_summary_status.py" = ["E402"]


[tool.ruff.lint.mccabe]
max-complexity = 10
